--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.vs-computer,
+.vs-player {
+	@apply m-3 h-36 w-36 rounded-2xl bg-zinc-200 bg-center bg-no-repeat;
+	background-size: 75%;
+}
+
+.vs-computer {
+	background-image: url('/svg/computer.svg');
+}
+
+.vs-player {
+	@apply ml-0;
+	background-image: url('/svg/users.svg');
+}
+
+.vs-computer:hover,
+.vs-player:hover {
+	filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(291deg) brightness(103%) contrast(103%);
+}
