--- a/src/styles.css
+++ b/src/styles.css
@@ -650,8 +650,8 @@ video {
   color: rgb(8 145 178 / var(--tw-text-opacity));
 }
 
-.vs-computer,
-.vs-player {
+#vs-computer,
+#vs-player {
   margin: 0.75rem;
   height: 9rem;
   width: 9rem;
@@ -663,17 +663,18 @@ video {
   background-size: 75%;
 }
 
-.vs-computer {
-  background-image: url('/svg/computer.svg');
+#vs-computer {
+  background-image: url("/svg/computer.svg");
 }
 
-.vs-player {
+#vs-player {
   margin-left: 0px;
-  background-image: url('/svg/users.svg');
+  background-image: url("/svg/users.svg");
 }
 
-.vs-computer:hover,
-.vs-player:hover {
+#vs-computer:hover,
+#vs-player:hover,
+.selected-mode {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(291deg) brightness(103%) contrast(103%);
 }
 
