--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 #vs-computer,
-#vs-player {
+#vs-player,
+#x-symbol,
+#o-symbol {
 	@apply m-3 h-36 w-36 rounded-2xl bg-zinc-200 bg-center bg-no-repeat;
 	background-size: 75%;
 }
@@ -17,8 +19,21 @@
 	background-image: url("/svg/users.svg");
 }
 
+#x-symbol {
+	background-image: url("/svg/cross.svg");
+	background-size: 60%;
+}
+
+#o-symbol {
+	@apply ml-0;
+	background-image: url("/svg/circle.svg");
+	background-size: 60%;
+}
+
 #vs-computer:hover,
 #vs-player:hover,
+#x-symbol:hover,
+#o-symbol:hover,
 .selected-mode {
 	filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(291deg) brightness(103%) contrast(103%);
 }
