--- a/src/styles.css
+++ b/src/styles.css
@@ -588,10 +588,6 @@ video {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
 .justify-around {
   justify-content: space-around;
 }
@@ -604,16 +600,6 @@ video {
   border-radius: 1rem;
 }
 
-.bg-slate-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
-}
-
 .bg-green-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
@@ -622,6 +608,16 @@ video {
 .bg-red-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -665,7 +661,9 @@ video {
 }
 
 #vs-computer,
-#vs-player {
+#vs-player,
+#x-symbol,
+#o-symbol {
   margin: 0.75rem;
   height: 9rem;
   width: 9rem;
@@ -686,8 +684,21 @@ video {
   background-image: url("/svg/users.svg");
 }
 
+#x-symbol {
+  background-image: url("/svg/cross.svg");
+  background-size: 60%;
+}
+
+#o-symbol {
+  margin-left: 0px;
+  background-image: url("/svg/circle.svg");
+  background-size: 60%;
+}
+
 #vs-computer:hover,
 #vs-player:hover,
+#x-symbol:hover,
+#o-symbol:hover,
 .selected-mode {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(291deg) brightness(103%) contrast(103%);
 }
