--- a/src/input.css
+++ b/src/input.css
@@ -34,6 +34,6 @@
 #vs-player:hover,
 #x-symbol:hover,
 #o-symbol:hover,
-.selected-mode {
+.selected-item {
 	filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(291deg) brightness(103%) contrast(103%);
 }
