--- a/src/styles.css
+++ b/src/styles.css
@@ -699,7 +699,7 @@ video {
 #vs-player:hover,
 #x-symbol:hover,
 #o-symbol:hover,
-.selected-mode {
+.selected-item {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(291deg) brightness(103%) contrast(103%);
 }
 
