--- a/src/styles.css
+++ b/src/styles.css
@@ -544,20 +544,81 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.left-0 {
+  left: 0px;
+}
+
 .m-12 {
   margin: 3rem;
+}
+
+.mx-12 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .mb-8 {
   margin-bottom: 2rem;
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-11 {
+  margin-bottom: 2.75rem;
+}
+
 .flex {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
+}
+
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 
 .h-20 {
@@ -576,6 +637,18 @@ video {
   max-width: 28rem;
 }
 
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -592,12 +665,20 @@ video {
   justify-content: space-around;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
 
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .bg-green-200 {
@@ -665,7 +746,7 @@ video {
 #x-symbol,
 #o-symbol {
   margin: 0.75rem;
-  height: 9rem;
+  aspect-ratio: 1 / 1;
   width: 9rem;
   border-radius: 1rem;
   --tw-bg-opacity: 1;
@@ -701,6 +782,35 @@ video {
 #o-symbol:hover,
 .selected-item {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(291deg) brightness(103%) contrast(103%);
+}
+
+.cell {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+  text-align: center;
+  vertical-align: baseline;
+}
+
+#back-arrow-button {
+  aspect-ratio: 1 / 1;
+  width: 2.5rem;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 1024px) {
+  #back-arrow-button {
+    width: 3rem;
+  }
+}
+
+#back-arrow-button {
+  background-image: url("/svg/arrow-left.svg");
+  background-size: 100%;
+}
+
+#back-arrow-button:hover {
+  filter: invert(50%) sepia(85%) saturate(4122%) hue-rotate(350deg) brightness(98%) contrast(106%);
 }
 
 .hover\:text-cyan-500:hover {
