--- a/src/styles.css
+++ b/src/styles.css
@@ -569,40 +569,16 @@ video {
   margin-bottom: 0px;
 }
 
+.mb-11 {
+  margin-bottom: 2.75rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
 }
 
 .mt-0 {
   margin-top: 0px;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-11 {
-  margin-bottom: 2.75rem;
 }
 
 .flex {
@@ -811,6 +787,20 @@ video {
 
 #back-arrow-button:hover {
   filter: invert(50%) sepia(85%) saturate(4122%) hue-rotate(350deg) brightness(98%) contrast(106%);
+}
+
+.x-marker {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("/svg/cross.svg");
+  background-size: 60%;
+}
+
+.o-marker {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("/svg/circle.svg");
+  background-size: 60%;
 }
 
 .hover\:text-cyan-500:hover {
