--- a/src/styles.css
+++ b/src/styles.css
@@ -556,14 +556,6 @@ video {
   position: relative;
 }
 
-.-inset-0 {
-  inset: -0px;
-}
-
-.inset-1 {
-  inset: 0.25rem;
-}
-
 .inset-x-2 {
   left: 0.5rem;
   right: 0.5rem;
@@ -571,22 +563,6 @@ video {
 
 .left-0 {
   left: 0px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.top-1 {
-  top: 0.25rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
 }
 
 .m-12 {
@@ -630,28 +606,12 @@ video {
   aspect-ratio: 1 / 1;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-4\/5 {
-  height: 80%;
-}
-
-.h-3\/5 {
-  height: 60%;
-}
-
-.h-3\/4 {
-  height: 75%;
-}
-
 .h-2\/3 {
   height: 66.666667%;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .w-4\/5 {
@@ -686,17 +646,6 @@ video {
 
 .animate-pulse {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
-@keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.animate-ping {
-  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
 .grid-cols-3 {
@@ -739,11 +688,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.bg-cyan-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
-}
-
 .bg-emerald-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(5 150 105 / var(--tw-bg-opacity));
@@ -764,17 +708,12 @@ video {
   background-color: rgb(112 26 117 / var(--tw-bg-opacity));
 }
 
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
 }
 
-.bg-opacity-100 {
-  --tw-bg-opacity: 1;
+.bg-part {
+  background-size: 75%;
 }
 
 .p-1 {
@@ -890,7 +829,6 @@ video {
 
 #back-arrow-button {
   background-image: url("/svg/arrow-left.svg");
-  background-size: 100%;
 }
 
 #back-arrow-button:hover {
@@ -957,7 +895,21 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:left-4 {
+    left: 1rem;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:bg-full {
+    background-size: 100%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:left-8 {
+    left: 2rem;
   }
 }
